Adding footer + updated img

--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -4,6 +4,10 @@
 
 .main {
 	display: flex;
+
+	img {
+		border-radius: 50%;
+	}
 }
 
 .main__text {
@@ -38,4 +42,6 @@
 	a:hover {
 		transform: scale(1.1);
 	}
+
+
 }
