--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,8 +1,4 @@
-header {
-	margin-top: 40px;
-	margin-bottom: 90px;
-	padding: 0 250px;
-}
+
 
 .logotype {
 	display: flex;
@@ -17,12 +13,30 @@ header {
 	}
 }
 
-nav {
+.header-nav {
 	display: flex;
 	text-align: center;
 	align-items: center;
 	justify-content: space-between;
+
+	margin-top: 40px;
+	margin-bottom: 90px;
+	padding: 0 250px 15px 250px;
+
+	position: relative;
 }
+
+.header-nav::after {
+	content: '';
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	height: 1px;
+	background-color: #f0f0f0;
+	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
 
 .refs {
 	list-style: none;
@@ -33,8 +47,18 @@ nav {
 	column-gap: 20px;
 }
 
+.refs__link-title {
+	cursor: pointer;
+	transition: all .3s linear ;
+}
+
+.refs__link-title:hover {
+	color: #878787;
+	font-size: 32px;
+}
 
 .refs__link {
+	cursor: pointer;
 	transition: all .3s linear ;
 }
 
