--- a/src/Components/Home/Refs/RefCard.css
+++ b/src/Components/Home/Refs/RefCard.css
@@ -8,6 +8,8 @@
 	border: 1px solid #000;
 	box-shadow: 0 6px 0 0 rgba(0, 0, 0, .7);
 	display: flex;
+	transition: all 0.3s ease-in-out;
+
 
 
 	.title-3 {
@@ -32,3 +34,6 @@
 
 }
 
+.card:hover {
+	transform: scale(1.1);
+}
