--- a/src/Components/Quiz/Games/Quiz.css
+++ b/src/Components/Quiz/Games/Quiz.css
@@ -2,3 +2,109 @@
 	font-size: 26px;
 	color: #FFFFFF;
 }
+
+.quiz {
+	display: flex;
+	flex-direction: column;
+	width: 700px;
+	text-align: center;
+	margin: 0 auto 147px;
+	padding: 20px;
+
+	img {
+		margin-bottom: 50px;
+	}
+
+	.quiz_text {
+		display: flex;
+		flex-direction: column;
+		gap: 20px;
+		background: #242e45;
+		border-radius: 20px;
+		margin-bottom: 20px;
+
+		box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.3);
+
+
+		.title_2 {
+			font-size: 20px;
+			color: #FFFFFF;
+			background: #141822;
+			padding: 10px;
+			border-radius: 15px 15px 0 0;
+			border: 3px solid #242e45;
+		}
+	}
+
+	.quiz-list {
+		display: flex;
+		justify-content: center;
+		gap: 30px;
+		align-items: center;
+		text-align: center;
+	}
+
+	span {
+		color: #fff;
+		display: flex;
+	}
+
+	.quiz-submit {
+		width: 300px;
+		padding: 15px;
+		border: none;
+		border-radius: 20px;
+		color: #FFFFFF;
+		font-size: 18px;
+		cursor: pointer;
+
+		background: #242e45;
+		box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.3);
+		transition: transform .3s ease-in-out;
+	}
+
+	.quiz-submit:hover {
+		transform: scale(1.1);
+	}
+
+	.input__answer {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+		margin-bottom: 15px;
+		text-align: center;
+	}
+}
+
+input[type="radio"] {
+	appearance: none;
+	width: 16px;
+	height: 16px;
+	border-radius: 50%;
+	border: 2px solid #ccc;
+	transition: border-color 0.3s ease;
+	cursor: pointer;
+
+}
+
+input[type="radio"]:checked {
+	border-color: #4CAF50;
+}
+
+input[type="radio"]:hover {
+	border-color: #4CAF50;
+}
+
+input[type="radio"]:checked::before {
+	content: "";
+	display: block;
+	width: 9px;
+	height: 9px;
+	border-radius: 50%;
+	background-color: #4CAF50;
+	margin: 2px auto;
+
+}
+
+
