--- a/src/Components/Home/Refs/RefCard.css
+++ b/src/Components/Home/Refs/RefCard.css
@@ -9,7 +9,7 @@
 	box-shadow: 0 6px 0 0 rgba(0, 0, 0, .7);
 	display: flex;
 	transition: all 0.3s ease-in-out;
-
+	cursor: pointer;
 
 
 	.title-3 {
