--- a/src/Components/Quiz/QuizHero/QuizHero.css
+++ b/src/Components/Quiz/QuizHero/QuizHero.css
@@ -46,4 +46,12 @@
 		font-size: 24px;
 	}
 
+	img {
+		width: 420px;
+		height: 400px;
+		border: 2px solid #f0f0f0;
+		border-radius: 10px;
+		padding: 5px;
+	}
+
 }
